# ProtToolKit

./: pyproject.toml
Structure_quality_eval/: run_dockqv2.py
extract_BB/: README_backbone_extraction.md
mpnn_selectBB/: pick_topBB.ipynb
parse_AF_predictions/: AF_model_selection.ipynb
shared/: clean_pdb.py  predataprocess.py
src/MD_analysis/: mdtraj_hbond_trace.py
src/Protein_design/: AF_model_selection.ipynb  pick_topBB.ipynb
src/Structure_quality_eval/: run_ddG_scan.py  run_pyrosetta.py
src/extract_BB/: example_backbone_extraction.py  extract_backbone_coordinates.py  extract_chain.py
src/shared/: csv_to_fasta.py
